# brickworks-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  build.rs.bkp  old_build.rs
.cargo/: config.toml
benches/: distortion_benchmark.rs
src/: global.rs  lib.rs
src/c_wrapper/: clip.rs  dist.rs  gain.rs  hp1.rs  lp1.rs  mm2.rs  mod.rs  one_pole.rs  one_pole_filter_rust_api.rs  one_pole_wrapper.rs  peak.rs  rust_api.rs  satur.rs  src_int.rs  svf.rs  utils.rs  wrapper.h  wrapper.hpp
src/native/: clip.rs  common.rs  dist.rs  gain.rs  hp1.rs  lp1.rs  math.rs  mm2.rs  mod.rs  one_pole.rs  peak.rs  satur.rs  src_int.rs  svf.rs
