[package]
name = "brickworks-rs"
version = "0.0.1"
authors = ["Federico Menegoz"]
description = "Rust port of the Brickworks audio DSP library"
edition = "2024"
license = "GPL-3.0-only"

[build-dependencies]
bindgen = "0.72.1"

[dependencies]
bitflags = "2.9.1"
rand = "*"

[profile.release]
lto = "fat"
codegen-units = 1

[dev-dependencies]
criterion = "0.7"

[[bench]]
name = "distortion_benchmark"
harness = false